--- a/css/styles.css
+++ b/css/styles.css
@@ -147,12 +147,13 @@ button:focus {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
-    /* grid-template-rows: 300px 300px; */
 }
 
 .grid__item {
-    background-color: var(--light-grey);
+    background-color: rgb(206, 202, 202);
     padding: 15px;
+    border-radius: 5px;
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.3);
 }
 
 @media all and (max-width: 500px) {
@@ -170,7 +171,7 @@ button:focus {
 
 @media all and (max-width: 750px) {
     .grid {
-        grid-gap: 10px;
+        grid-gap: 20px;
     }
 
     .grid__item:last-child {
@@ -242,4 +243,47 @@ button:focus {
     }
 }
 
-/*delete this later*/
+.container {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.table {
+    border-spacing: 10px;
+    text-align: left;
+    border-radius: 5px;
+}
+
+form {
+    width: 500px;
+}
+
+label,
+input,
+textarea {
+    display: block;
+    margin-bottom: 10px;
+    width: 100%;
+}
+
+.form-button {
+    margin-top: 25px;
+    padding: 10px 3rem;
+    font-size: 18px;
+    font-weight: 700;
+    border-radius: 5px;
+    border: none;
+    background-color: #357b70;
+    color: white;
+    letter-spacing: 3px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+    transition: opacity .2s;
+}
+
+.form-button:hover {
+    opacity: .8;
+}
+
+ul {
+    padding-left: 20px;
+}
