--- a/css/styles.css
+++ b/css/styles.css
@@ -161,6 +161,13 @@ button:focus {
     .grid {
         grid-template-columns: 1fr;
     }
+
+    form,
+    input,
+    label,
+    textarea {
+        width: auto;
+    }
 }
 
 @media all and (min-width: 501px) and (max-width: 750px) {
@@ -255,7 +262,7 @@ button:focus {
 }
 
 form {
-    width: 500px;
+    width: 700px;
 }
 
 label,
