--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,7 @@ button:focus {
 
 .page-header__item {
     flex: 0 1 200px;
+    height: 70px;
 }
 
 .page-header__item:last-child {
@@ -293,4 +294,9 @@ textarea {
 
 ul {
     padding-left: 20px;
+}
+
+.icon {
+    width: 30px;
+    height: 30px;
 }
