--- a/css/style.production.css
+++ b/css/style.production.css
@@ -112,6 +112,7 @@ button:focus {
     margin-right: 40px;
     float: left;
     border-radius: 50%;
+    margin-left: 10px;
 }
 
 .page__footer {
@@ -193,6 +194,22 @@ button:focus {
     label,
     textarea {
         width: auto;
+    }
+
+    .button {
+        display: block;
+        margin: 10px auto;
+        width: 250px;
+        text-align: center;
+    }
+    h1,h2 {
+        text-align: center;
+    }
+    .profile__portrait {
+        float: none;
+    }
+    .profile {
+        text-align: center;
     }
 }
 
