--- a/css/styles.css
+++ b/css/styles.css
@@ -142,7 +142,7 @@ button:focus {
 }
 
 
-.about-me-title{
+.a-title{
    grid-column: 1 /span 2;
    color: lightblue;
    border-bottom: 1px solid lightblue;
@@ -150,12 +150,19 @@ button:focus {
 }
 
 .profile__portrait {
+    position: relative;
     width: 300px;
     height: 300px;
     margin: 20px auto;
     border-radius: 5px;
     transition: all 0.125s ease-in-out;
 }
+/* .profile__portrait::before {
+    content: 'halsdkf';
+    background-color: red;
+    position: absolute;
+} */
+
 .profile__portrait:hover {
     scale: 1.025;
     box-shadow: 3px 3px 4px rgba(255,255,255,.3);
@@ -209,10 +216,27 @@ button:focus {
 }
 
 .grid__item {
-    background: linear-gradient(to bottom right,rgb(206, 202, 202), rgb(164, 164, 164));
-    padding: 15px;
-    border-radius: 5px;
+    position: relative;
+    background-color: #041b30;
+    padding: 20px;
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.3);
+}
+.proj-card {
+    color: #ebbcbb;
+    font-size: .8rem;
+}
+.proj-card h2 {
+    color: lightblue;
+}
+.grid__item::before{
+    content: '';
+    position: absolute;
+    background: rgb(2,0,36);
+    background: linear-gradient(128deg, rgba(2,0,36,.5) 0%, rgba(145,10,116,.5) 55%, rgba(38,149,207,.5) 97%, rgba(0,212,255,.4) 100%);
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 @media all and (max-width: 500px) {
@@ -228,22 +252,17 @@ button:focus {
         grid-template-columns: auto;
     }
 
-    form,
-    input,
-    label,
-    textarea {
+    #contactForm {
         width: auto;
     }
+
     .button {
         display: block;
         margin: 10px auto;
         width: 250px;
         text-align: center;
     }
-    /* .hollow-button {
-       display: inline-block;
-       margin-top: 20px;
-    } */
+
     .hollow-button,.hollow-button2{
         width: 100%;
         text-align: center;
@@ -261,6 +280,10 @@ button:focus {
         display: inline-block;
         font-size: 2.5rem;
         padding: 3px
+    }
+    .cta {
+        font-weight: 600;
+        color: #214c46;
     }
 
 
@@ -285,9 +308,7 @@ button:focus {
     .profile {
         padding: 0 20px;
     }
-    .cta {
-        width: auto;
-    }
+
     p,li,th,td {
         font-size: .9rem;
     }
