--- a/css/styles.css
+++ b/css/styles.css
@@ -89,13 +89,18 @@ margin-top: 50px;
 display: block;
 }
 
-.hollow-button2 {
+.hollow-button2, .hollow-button2.sub-btn{
     border: 2px solid lightblue;
+    background-color: transparent;
+    color: var(--primary-color);
+    margin-top: 2rem;
     display: inline-block;
-    padding: 5px 20px;
+    padding: 1rem 2rem;
     border-radius: 5px;
     transition: background-color .2s ease-in-out;
+    cursor: pointer;
 }
+
 
 .hollow-button:hover{
 background-color:#083661c4;
@@ -104,31 +109,6 @@ background-color:#083661c4;
 background-color:#083661c4;
 }
 
-/* .button,
-button {
-    display: inline-block;
-    margin-right: 10px;
-    margin-bottom: .5rem;
-    border: none;
-    font-family: inherit;
-    background: linear-gradient(to bottom right, var(--primary-color), #214c46);
-    font-size: var(--normal-font-size);
-    color: var(--light-grey);
-    padding: 10px;
-    border-radius: 3px;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-    transition: 0.2s opacity;
-    font-weight: var(--heavy-font-weight);
-}
-
-.button:hover,
-.button:focus,
-button:hover,
-button:focus {
-    cursor: pointer;
-    opacity: 0.8;
-} */
-
 .button-secondary {
     background: linear-gradient(to bottom right, var(--secondary-color), #b49044);
     color: var(--text-color);
@@ -136,7 +116,7 @@ button:focus {
 .two-col-grid{
     display: grid;
     grid-template-columns: 3fr 2fr;
-    margin: 5rem auto;
+    margin: 5rem auto .5rem auto;
     grid-gap: 20px;
     max-width: 1000px;
 }
@@ -147,6 +127,8 @@ button:focus {
    color: lightblue;
    border-bottom: 1px solid lightblue;
    padding-bottom: 15px;
+   display: inline-block;
+   width: 100%;
 }
 
 .profile__portrait {
@@ -157,11 +139,6 @@ button:focus {
     border-radius: 5px;
     transition: all 0.125s ease-in-out;
 }
-/* .profile__portrait::before {
-    content: 'halsdkf';
-    background-color: red;
-    position: absolute;
-} */
 
 .profile__portrait:hover {
     scale: 1.025;
@@ -213,6 +190,8 @@ button:focus {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
+    max-width: 1000px;
+    margin-top: 3rem;
 }
 
 .grid__item {
@@ -232,24 +211,61 @@ button:focus {
     content: '';
     position: absolute;
     background: rgb(2,0,36);
-    background: linear-gradient(128deg, rgba(2,0,36,.5) 0%, rgba(145,10,116,.5) 55%, rgba(38,149,207,.5) 97%, rgba(0,212,255,.4) 100%);
+    background: linear-gradient(128deg, rgba(2,0,36,.5) 0%, #910a7480 55%, rgba(38,149,207,.5) 97%, rgba(0,212,255,.4) 100%);
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
 }
+.grid__item::after{
+    content: '';
+    height: 2px;
+    background-color: white;
+    left: 10px;
+    right: 10px;
+    position: absolute;
+    bottom: 10px;
+    animation: 5s comeNGo alternate infinite ease-in-out;
+}
+@keyframes comeNGo {
+    0% {
+        width: 94%;
+        opacity: 1;
+    }
+    25%{
+        width: 75%;
+        opacity: .75;
+    }
+    50%{
+        width: 50%;
+        opacity: .5;
+    }
+    75%{
+        width: 25%;
+        opacity: .25;
+    }
+    100%{
+        width: 0%;
+        opacity: 0;
+    }
+}
+
+
+
 
 @media all and (max-width: 500px) {
 
     .two-col-grid {
         display: flex;
         flex-direction: column;
-        padding: 20px;
         margin-top: 5rem;
     }
-
+    .container{
+        padding: 20px;
+    }
     .grid {
         grid-template-columns: auto;
+        padding: 20px;
     }
 
     #contactForm {
@@ -291,9 +307,11 @@ button:focus {
         text-align: left;
         line-height: 2.5rem;
     }
-    .about-me-title{
-        grid-column: span auto;
+    .a-title{
         order: -2;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .grit-it{
@@ -316,6 +334,7 @@ button:focus {
         height: 50px;
         flex: 0 0 50px;
     }
+
 }
 
 @media all and (min-width: 501px) and (max-width: 750px) {
@@ -401,8 +420,8 @@ button:focus {
 }
 
 .container {
-    margin-left: 20px;
-    margin-right: 20px;
+    max-width: 1000px;
+    margin: 3rem auto;
 }
 
 .table {
